--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                 라인 수
               </div>
               <div class="game-line-choose">
-                <img class="line-count-down" src="./img/left-arrow.svg"/>
+                <img class="line-count-down" src="/img/left-arrow.svg"/>
                 <div id="game-line-count">3</div>
-                <img class="line-count-up" src="./img/right-arrow.svg"/>
+                <img class="line-count-up" src="/img/right-arrow.svg"/>
               </div>  
             </div>
             <form class="first-attack-select">
