--- a/index.html
+++ b/index.html
@@ -126,5 +126,6 @@
       </div>
     </main>
     <script type="module" src="src/index.js"></script>
+    <link rel="stylesheet" href="src/style.css">
   </body>
 </html>
